Version 0.2.0~dev

	* Handle SSL certificates. Closes: #1912.
	* Fix: Display read message instead of UnpicklingError.

Version 0.1.0 Released on 2009/05/12

	* Initial release
	* Added more exceptions class
	* Better error handling for UnpicklingError
	* Moved exceptions to their own python file
	* Fix bug: Different instances of Importer was sharing the same "conf"
	dictionary (due to the way python handle default arg for parameters)